Improved navigation menu on mobile version and fixed menu on desktop version (request #7)

--- a/media/stylesheet.css
+++ b/media/stylesheet.css
@@ -23,9 +23,13 @@ body {
 	left: 0;
 }
 
+#nav_toggle {
+	display: none;
+}
+
 #nav {
 	width: 200px;
-	float: left;
+	position: fixed;
 }
 
 #nav ul {
@@ -52,6 +56,7 @@ body {
 #nav a {
 	color: #111;
 	text-decoration: none;
+	display: block;
 }
 
 #content {
@@ -72,15 +77,6 @@ body {
 
 #content a:hover {
 	border-bottom: 1px solid black;
-}
-
-#content hr {
-	display: none;
-}
-
-#disqus_container {
-	width: 800px;
-	float: right;
 }
 
 #disqus_thread a { border: 0; }
@@ -119,8 +115,8 @@ div > p > code {
 
 	font-size: 14px;
 
-    border: 1px solid #ddd;
-    background: #f5f5f5;
+	border: 1px solid #ddd;
+	background: #f5f5f5;
 }
 
 li > code {
@@ -128,8 +124,8 @@ li > code {
 
 	font-size: 14px;
 
-    border: 1px solid #ddd;
-    background: #f5f5f5;
+	border: 1px solid #ddd;
+	background: #f5f5f5;
 }
 
 code[class=cpp] {
